--- a/src/assets/login/css/login.css
+++ b/src/assets/login/css/login.css
@@ -45,7 +45,7 @@ html,body{
 	width: 100%;
 	height: 100vh;
 	position: relative;
-	background-image: url(../img/bg_login.jpg);
+	background-image: url(../img/bg.jpg);
 	background-position: 50% 50%;
 	background-size: cover;
 	background-repeat: no-repeat;
