--- a/src/theme/dark-purple.less
+++ b/src/theme/dark-purple.less
@@ -2,35 +2,5 @@
 // 主题：黑 + 紫
 @import "ant-design-vue/lib/style/themes/dark.less";
 
-// 主色调（紫）
+// 主题颜色（紫）
 @primary-color: #5E5FEA;
-// 主悬浮色调（淡紫）
-@primary-color-hover: #B8C7FE;
-// body背景颜色
-@body-background: #000000;
-// 卡片背景颜色
-@card-background: #323232;
-
-// 按钮
-// 按钮主颜色
-@btn-primary-color: #fff;
-@btn-primary-bg: #5E5FEA;
-
-// 文字颜色
-// 主文字颜色（深色）
-@text-color: #F0F0F0;
-// 文字悬浮颜色（中度色）
-@text-color-hover: #E6E6E6;
-// 文字阴影颜色（浅色）
-@text-color-shadow: #DCDCDC;
-
-// 边框颜色
-@border-color-base: #434343;
-
-// 折叠面板
-@collapse-header-bg: #000000;
-@collapse-content-bg: #000000;
-
-// 滚动条
-@scrollbar-bg: #252525;
-@scrollbar-thumb-bg: #414141;
