--- a/src/theme/bright.less
+++ b/src/theme/bright.less
@@ -1,6 +1,7 @@
 // 明亮配色
 // 主题：白 + 蓝
 @import "ant-design-vue/lib/style/themes/default.less";
+@import "/@/theme/variables/bright-variables.less";
 
 // 主题颜色（蓝）
 @primary-color: #5582F3;
