--- a/src/theme/dark.less
+++ b/src/theme/dark.less
@@ -1,6 +1,7 @@
 // 暗黑配色
 // 主题：黑 + 蓝
 @import "ant-design-vue/lib/style/themes/dark.less";
+@import "/@/theme/variables/dark-variables.less";
 
 // 主题颜色（蓝）
 @primary-color: #5582F3;
