--- a/src/theme/bright-cyan.less
+++ b/src/theme/bright-cyan.less
@@ -1,6 +1,7 @@
 // 明亮配色
 // 主题：白 + 青
 @import "ant-design-vue/lib/style/themes/default.less";
+@import "/@/theme/variables/bright-variables.less";
 
 // 主题颜色（青）
 @primary-color: #29C392;
