--- a/src/theme/bright-orange.less
+++ b/src/theme/bright-orange.less
@@ -1,6 +1,7 @@
 // 明亮配色
 // 主题：白 + 橙
 @import "ant-design-vue/lib/style/themes/default.less";
+@import "/@/theme/variables/bright-variables.less";
 
 // 主题颜色(橙)
 @primary-color: #EE8055;
