--- a/src/theme/bright-purple.less
+++ b/src/theme/bright-purple.less
@@ -1,6 +1,7 @@
 // 明亮配色
 // 主题：白 + 紫
 @import "ant-design-vue/lib/style/themes/default.less";
+@import "/@/theme/variables/bright-variables.less";
 
 // 主题颜色（紫）
 @primary-color: #5E5FEA;
