--- a/src/theme/dark-cyan.less
+++ b/src/theme/dark-cyan.less
@@ -1,6 +1,7 @@
 // 暗黑配色
 // 主题：黑 + 青
 @import "ant-design-vue/lib/style/themes/dark.less";
+@import "/@/theme/variables/dark-variables.less";
 
 // 主题颜色（青）
 @primary-color: #29C392;
