--- a/src/theme/dark-orange.less
+++ b/src/theme/dark-orange.less
@@ -1,6 +1,7 @@
 // 暗黑配色
 // 主题：黑 + 橙
 @import "ant-design-vue/lib/style/themes/dark.less";
+@import "/@/theme/variables/dark-variables.less";
 
 // 主题颜色(橙)
 @primary-color: #EE8055;
