--- a/src/theme/dark-purple.less
+++ b/src/theme/dark-purple.less
@@ -1,6 +1,7 @@
 // 暗黑配色
 // 主题：黑 + 紫
 @import "ant-design-vue/lib/style/themes/dark.less";
+@import "/@/theme/variables/dark-variables.less";
 
 // 主题颜色（紫）
 @primary-color: #5E5FEA;
