首页菜单调整

--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -15,6 +15,17 @@
 	background-color: inherit !important;
 }
 
+/**************** 默认全局样式 ****************/
+* {
+	margin: 0;
+	padding: 0;
+	font-size: 12px;
+}
+
+a {
+	outline-style: none;
+}
+
 /* 设置滚动条的样式 */
 ::-webkit-scrollbar {
 	width: 12px;
