--- a/src/theme/variables/dark-variables.less
+++ b/src/theme/variables/dark-variables.less
@@ -1,3 +1,8 @@
 // 滚动条颜色（全局）
 @scrollbar-bg: #252525;
 @scrollbar-thumb-bg: #414141;
+
+// 布局的背景颜色
+@layout-body-background: @body-background;
+@layout-header-background: @body-background;
+@layout-sider-background: @body-background;
